welcome.lessons.welcome.variables.Variables.scala.error
Variables:14: error: not found: value reculePas
	while(reculePas != nbPas)
              ^Variables:17: error: not found: value reculePas
		reculePas = reculePas + 1
                ^